fix: make code block pre-wrap

--- a/src/css/blocks/_code-blocks.scss
+++ b/src/css/blocks/_code-blocks.scss
@@ -27,7 +27,7 @@ pre[class*="language-"] {
 		color: var(--color-snowy);
 		padding: 0;
 		line-height: var(--line-height-code);
-		white-space: pre;
+		white-space: pre-wrap;
 	}
 
 	.flow > * + & {
